# mlflow-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
mlflow_demo/: metrics.py  plotting.py
notebooks/: Presentation.ipynb  setup.py  temp-plot.html
tests/: test_mlflow_demo.py
