[tool.poetry]
name = "mlflow-demo"
version = "0.1.0"
description = ""
authors = ["Peter Sandberg <petthosan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^5.5.0"
plotly = "^4.14.3"
pre-commit = "^2.11.1"
mlflow = "^1.14.1"
scikit-learn = "^0.24.1"
nbformat = "^5.1.2"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
